cluster/music-streaming/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: music-streaming
  labels:
    name: music-streaming
