cluster/music-streaming/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gonic
  namespace: music-streaming
spec:
  replicas: 0 # TEMP: #2665 migrating gonic-data + gonic-playlists to the ssd tier
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: gonic
  template:
    metadata:
      labels:
        app: gonic
    spec:
      containers:
        - name: gonic
          image: ghcr.io/sentriz/gonic:v0.22.0@sha256:516fd9645614ba3a596d86174216c3e944808b9ec970c581678713be4c8b1d49
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - name: music-storage
              mountPath: /music
              readOnly: true
            - name: cache-storage
              mountPath: /cache
            - name: data-storage
              mountPath: /data
            - name: playlists-storage
              mountPath: /playlists
          resources:
            requests:
              memory: 2Gi
              cpu: 1
            limits:
              memory: 2Gi
          livenessProbe:
            httpGet:
              path: /rest/ping
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /rest/ping
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
        - name: webdav
          image: ghcr.io/christopherjmiller/docker-webdav:master-5831339
          ports:
            - containerPort: 8080
              name: webdav
          volumeMounts:
            - name: music-storage
              mountPath: /media
              subPath: data
      volumes:
        - name: music-storage
          persistentVolumeClaim:
            claimName: gonic-music-pvc
        - name: cache-storage
          persistentVolumeClaim:
            claimName: gonic-cache-pvc
        - name: data-storage
          persistentVolumeClaim:
            claimName: gonic-data-pvc
        - name: playlists-storage
          persistentVolumeClaim:
            claimName: gonic-playlists-pvc
