cluster/music-streaming/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gonic
  namespace: music-streaming
  labels:
    app: gonic
spec:
  selector:
    app: gonic
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
    - name: webdav
      port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
