cluster/music-streaming/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gonic
  annotations:
    kubernetes.io/ingress.class: nginx
    external-dns.kubernetes.io/target: chrismiller.xyz
    nginx.ingress.kubernetes.io/proxy-body-size: '0'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '600'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '600'
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - music.chrismiller.xyz
      secretName: gonic-tls
  rules:
    - host: music.chrismiller.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gonic
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gonic-webdav
  annotations:
    kubernetes.io/ingress.class: nginx
    external-dns.kubernetes.io/target: chrismiller.xyz
    nginx.ingress.kubernetes.io/proxy-body-size: '0'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '600'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '600'
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - dav.music.chrismiller.xyz
      secretName: gonic-webdav-tls
  rules:
    - host: dav.music.chrismiller.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gonic
                port:
                  number: 8080
